test/files/neg/badtok-1-212.scala
// bug 989
'42'


// SI-10133
'''

'';

'
